--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <div class="space-y-2">
                          <div>
                             <h3 class="font-semibold text-gray-700 inline-block w-28 align-top">AI与数据科学:</h3>
-                            <p class="inline-block text-gray-600 w-3/4">Python, R, SPSS, 主流AI文本及图像生成工具/p>
+                            <p class="inline-block text-gray-600 w-3/4">Python, R, SPSS, 主流AI文本及图像生成工具</p>
                         </div>
                         <div>
                             <h3 class="font-semibold text-gray-700 inline-block w-28">GIS与可视化:</h3>
